--- a/Projects/4 - Network/network/network/templates/network/edit.html
+++ b/Projects/4 - Network/network/network/templates/network/edit.html
@@ -22,4 +22,18 @@
         <div>{{ err }}</div>
     {% endif %}
 
+    <form action="{% url 'edit-post' %}" method="POST">
+        {% csrf_token %}
+        {% if edit %}
+            <input type="hidden" name="post-id" value="{{ id_ }}">
+        {% endif %}
+        <div class="form-group">
+            <textarea autofocus required class="form-control" id="content" name="content" {% if edit %}value="{{ content }}"{% endif %} aria-describedby="content-help" rows="5" maxlength="280" placeholder="What's on your mind?"></textarea>
+            <small id="content-help" class="form-text text-muted">
+                You post can have up to 280 characters
+            </small>
+        </div>
+        <input class="btn btn-primary" type="submit" value="Save">
+    </form>
+
 {% endblock body %}
