--- a/Projects/4 - Network/network/network/templates/network/layout.html
+++ b/Projects/4 - Network/network/network/templates/network/layout.html
@@ -26,6 +26,9 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'edit-view' %}">New Post</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'following' %}">Following</a>
                     </li>
                     <li class="nav-item">
