--- a/Projects/4 - Network/network/network/templates/network/profile.html
+++ b/Projects/4 - Network/network/network/templates/network/profile.html
@@ -26,8 +26,8 @@
                     <div class="follow-button div-button {% if follows %}followed-button{% else %}unfollowed-button{% endif %}" id="follow-button"></div>
                 </div>
             {% endif %}
-            <div class="num-followers">Followed by {{ num_followers }} {{ num_followers|pluralize:"person,people" }}</div>
-            <div class="num-followees">Follows <span id="num-followees">{{ num_followees }}</span> <span id="num-followees-pluralize">{{ num_followees|pluralize:"person,people" }}</span></div>
+            <div class="num-followers">Followed by <span id="num-followers">{{ num_followers }}</span> <span id="num-followers-pluralize">{{ num_followers|pluralize:"person,people" }}</span></div>
+            <div class="num-followees">Follows {{ num_followees }} {{ num_followees|pluralize:"person,people" }}</div>
             {% include "network/includes/posts/post-container.html" %}
         </div>
     {% endif %}
