--- a/Projects/5 - Capstone/capstone/lettershuffle/templates/base-lettershuffle.html
+++ b/Projects/5 - Capstone/capstone/lettershuffle/templates/base-lettershuffle.html
@@ -51,7 +51,7 @@
                 </ul>
             </div>
         </nav>
-        <main class="container">
+        <main>
             {% block body %}{% endblock body %}
         </main>
         {% block scripts %}{% endblock scripts %}
