--- a/Projects/5 - Capstone/capstone/lettershuffle/templates/lettershuffle/puzzle.html
+++ b/Projects/5 - Capstone/capstone/lettershuffle/templates/lettershuffle/puzzle.html
@@ -5,7 +5,7 @@
 {% endblock head %}
 
 {% block body %}
-    <div class="welcome" id="welcome">
+    <div class="welcome fade-in" id="welcome">
         <div>
             <div id="letter-shuffle-title"></div>
             <form action="{% url 'puzzle-get-api' %}" method="get" id="puzzle-get">
