--- a/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/sass/puzzle.scss
+++ b/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/sass/puzzle.scss
@@ -13,6 +13,16 @@
     align-items: center;
 }
 
+@keyframes fadeIn {
+    0% {
+        opacity: 0%;
+    }
+
+    100% {
+        opacity: 100%;
+    }
+}
+
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -24,9 +34,12 @@ body {
     text-align: center;
 }
 
-#welcome,
-#puzzle {
-    visibility: hidden;
+.fade-in {
+    animation: fadeIn 1s;
+}
+
+#welcome {
+    z-index: 1;
 }
 
 #letter-shuffle-title {
