--- a/Projects/5 - Capstone/capstone/lettershuffle/templates/base-lettershuffle.html
+++ b/Projects/5 - Capstone/capstone/lettershuffle/templates/base-lettershuffle.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}LetterShuffle{% endblock title %}</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         {% block head %}{% endblock head %}
     </head>
     <body>
         <nav class="navbar navbar-expand-lg">
-            <a href="{% url 'index' %}" class="navbar-brand">LetterShuffle</a>
+            <a href="{% url 'puzzle-view' %}" class="navbar-brand">LetterShuffle</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
