--- a/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/css/common.css
+++ b/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/css/common.css
@@ -1,3 +1,12 @@
+nav {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 100;
+}
+
 .container {
   width: 80%;
 }
