--- a/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/css/puzzle.css
+++ b/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/css/puzzle.css
@@ -36,6 +36,7 @@ body {
 }
 
 .letter-box {
+  font-size: medium;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,20 +48,69 @@ body {
   border: 0.1em solid brown;
   border-radius: 0.5em;
   font-family: "Courier New", Courier, monospace;
-  font-size: xxx-large;
+}
+@media (min-width: 576px) {
+  .letter-box {
+    font-size: large;
+  }
+}
+@media (min-width: 768px) {
+  .letter-box {
+    font-size: larger;
+  }
+}
+@media (min-width: 992px) {
+  .letter-box {
+    font-size: x-large;
+  }
+}
+@media (min-width: 1200px) {
+  .letter-box {
+    font-size: xx-large;
+  }
+}
+@media (min-width: 1560px) {
+  .letter-box {
+    font-size: xxx-large;
+  }
 }
 
 .text-input {
+  font-size: small;
   display: block;
   width: 70%;
+  height: 3em;
   margin: 0.1em;
   border: 0.1em solid gray;
   border-radius: 1.25em;
-  padding: 0.5em;
-  font-size: xx-large;
   font-family: "Courier New", Courier, monospace;
   text-transform: uppercase;
   text-align: center;
+}
+@media (min-width: 576px) {
+  .text-input {
+    font-size: medium;
+  }
+}
+@media (min-width: 768px) {
+  .text-input {
+    font-size: large;
+  }
+}
+@media (min-width: 992px) {
+  .text-input {
+    font-size: larger;
+  }
+}
+@media (min-width: 1200px) {
+  .text-input {
+    font-size: x-large;
+  }
+}
+@media (min-width: 1560px) {
+  .text-input {
+    font-size: xx-large;
+  }
 }
 
 .submit {
@@ -68,18 +118,68 @@ body {
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
+  font-size: small;
   background-color: green;
-  width: 2.5em;
-  height: 2.5em;
+  width: 3em;
+  height: 3em;
   margin: 0.1em;
   border: 0.1em solid green;
-  border-radius: 1.25em;
-  font-size: xx-large;
+  border-radius: 1.5em;
+}
+@media (min-width: 576px) {
+  .submit {
+    font-size: medium;
+  }
+}
+@media (min-width: 768px) {
+  .submit {
+    font-size: large;
+  }
+}
+@media (min-width: 992px) {
+  .submit {
+    font-size: larger;
+  }
+}
+@media (min-width: 1200px) {
+  .submit {
+    font-size: x-large;
+  }
+}
+@media (min-width: 1560px) {
+  .submit {
+    font-size: xx-large;
+  }
 }
 
 .material-icons {
-  font-size: xx-large;
+  font-size: medium;
   color: white;
+}
+@media (min-width: 576px) {
+  .material-icons {
+    font-size: large;
+  }
+}
+@media (min-width: 768px) {
+  .material-icons {
+    font-size: larger;
+  }
+}
+@media (min-width: 992px) {
+  .material-icons {
+    font-size: x-large;
+  }
+}
+@media (min-width: 1200px) {
+  .material-icons {
+    font-size: xx-large;
+  }
+}
+@media (min-width: 1560px) {
+  .material-icons {
+    font-size: xxx-large;
+  }
 }
 
 #welcome {
@@ -87,8 +187,33 @@ body {
 }
 
 #letter-shuffle-title {
-  font-size: xxx-large;
+  font-size: medium;
   margin: 0.5em 0;
+}
+@media (min-width: 576px) {
+  #letter-shuffle-title {
+    font-size: large;
+  }
+}
+@media (min-width: 768px) {
+  #letter-shuffle-title {
+    font-size: larger;
+  }
+}
+@media (min-width: 992px) {
+  #letter-shuffle-title {
+    font-size: x-large;
+  }
+}
+@media (min-width: 1200px) {
+  #letter-shuffle-title {
+    font-size: xx-large;
+  }
+}
+@media (min-width: 1560px) {
+  #letter-shuffle-title {
+    font-size: xxx-large;
+  }
 }
 
 #form {
