--- a/Projects/5 - Capstone/capstone/lettershuffle/templates/lettershuffle/puzzle.html
+++ b/Projects/5 - Capstone/capstone/lettershuffle/templates/lettershuffle/puzzle.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'lettershuffle/css/common.css' %}">
     <link rel="stylesheet" href="{% static 'lettershuffle/css/puzzle.css' %}">
 {% endblock head %}
 
@@ -11,7 +10,8 @@
         <div class="container">
             <div id="letter-shuffle-title"></div>
             <form id="form">
-                <input type="text" name="text-input" class="text-input" id="text-input">
+                <div class="text-input" id="text-input"></div>
+                <input type="hidden" name="text-input">
                 <button type="submit" class="submit"><i class="material-icons">send</i></button>
             </form>
         </div>
