--- a/Projects/5 - Capstone/capstone/lettershuffle/templates/lettershuffle/puzzle.html
+++ b/Projects/5 - Capstone/capstone/lettershuffle/templates/lettershuffle/puzzle.html
@@ -10,8 +10,8 @@
         <div class="container">
             <div id="letter-shuffle-title"></div>
             <form id="form">
-                <div class="text-input" id="text-input"></div>
-                <input type="hidden" name="text-input">
+                <div class="answer" id="answer"></div>
+                <input type="hidden" name="answer">
                 <button type="submit" class="submit"><i class="material-icons">send</i></button>
             </form>
         </div>
