--- a/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/sass/puzzle.scss
+++ b/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/sass/puzzle.scss
@@ -1,53 +1,26 @@
-$x-small: 576px;
 $small: 768px;
-$medium: 992px;
 $large: 1200px;
-$x-large: 1560px;
 
 @mixin big-text {
-    font-size: small;
-
-    @media (min-width: $x-small) {
-        font-size: medium;
-    }
+    font-size: larger;
 
     @media (min-width: $small) {
-        font-size: large;
-    }
-
-    @media (min-width: $medium) {
-        font-size: larger;
-    }
-
-    @media (min-width: $large) {
         font-size: x-large;
     }
 
-    @media (min-width: $x-large) {
+    @media (min-width: $large) {
         font-size: xx-large;
     }
 }
 
 @mixin bigger-text {
-    font-size: medium;
-
-    @media (min-width: $x-small) {
-        font-size: large;
-    }
+    font-size: x-large;
 
     @media (min-width: $small) {
-        font-size: larger;
-    }
-
-    @media (min-width: $medium) {
-        font-size: x-large;
-    }
-
-    @media (min-width: $large) {
         font-size: xx-large;
     }
 
-    @media (min-width: $x-large) {
+    @media (min-width: $large) {
         font-size: xxx-large;
     }
 }
@@ -101,13 +74,14 @@ body {
 
 .letter-box-container {
     @include center-flex;
+    min-height: 3em;
+    border: 0.1em solid brown;
+    border-radius: 0.5em;
 }
 
 .letter-box {
     @include bigger-text;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include center-flex;
     background-color: brown;
     color: white;
     width: 1.5em;
@@ -118,11 +92,11 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
-.text-input {
+.answer {
     @include big-text;
-    display: block;
+    @include center-flex;
     width: 70%;
-    height: 3em;
+    min-height: 3em;
     margin: 0.1em;
     border: 0.1em solid gray;
     border-radius: 1.25em;
