--- a/Projects/5 - Capstone/capstone/lettershuffle/templates/lettershuffle/puzzle.html
+++ b/Projects/5 - Capstone/capstone/lettershuffle/templates/lettershuffle/puzzle.html
@@ -12,7 +12,7 @@
             <form id="form">
                 <div class="answer" id="answer"></div>
                 <input type="hidden" name="answer">
-                <button type="submit" class="submit"><i class="material-icons">send</i></button>
+                <button type="submit" class="submit" id="submit"><i class="material-icons">send</i></button>
             </form>
         </div>
     </div>
