--- a/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/css/puzzle.css
+++ b/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/css/puzzle.css
@@ -6,6 +6,26 @@
     opacity: 100%;
   }
 }
+@keyframes success {
+  0% {
+    background-color: darkgreen;
+    border-color: darkgreen;
+  }
+  100% {
+    background-color: darkblue;
+    border-color: darkblue;
+  }
+}
+@keyframes failure {
+  0% {
+    background-color: darkred;
+    border-color: darkred;
+  }
+  100% {
+    background-color: darkblue;
+    border-color: darkblue;
+  }
+}
 body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
@@ -44,12 +64,12 @@ body {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  background-color: brown;
   color: white;
   width: 1.5em;
   height: 1.5em;
   margin: 0.1em;
-  border: 0.1em solid brown;
+  border-width: 0.1em;
+  border-style: solid;
   border-radius: 0.5em;
   font-family: "Courier New", Courier, monospace;
 }
@@ -66,7 +86,8 @@ body {
 
 .letter-box.ghost {
   background-color: transparent;
-  border: 0.1em dashed brown;
+  border-style: dashed;
+  border-color: black;
 }
 
 .dragged {
@@ -105,11 +126,11 @@ body {
   justify-content: center;
   align-items: center;
   font-size: larger;
-  background-color: green;
+  background-color: darkblue;
   width: 3em;
   height: 3em;
   margin: 0.1em;
-  border: 0.1em solid green;
+  border: 0.1em solid darkblue;
   border-radius: 1.5em;
 }
 @media (min-width: 768px) {
@@ -121,6 +142,14 @@ body {
   .submit {
     font-size: xx-large;
   }
+}
+
+.success {
+  animation: success 2s ease;
+}
+
+.failure {
+  animation: failure 2s ease;
 }
 
 .material-icons {
