--- a/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/css/puzzle.css
+++ b/Projects/5 - Capstone/capstone/lettershuffle/static/lettershuffle/css/puzzle.css
@@ -6,16 +6,6 @@
     opacity: 100%;
   }
 }
-@keyframes success {
-  0% {
-    background-color: darkgreen;
-    border-color: darkgreen;
-  }
-  100% {
-    background-color: darkblue;
-    border-color: darkblue;
-  }
-}
 @keyframes failure {
   0% {
     background-color: darkred;
@@ -28,6 +18,10 @@
 }
 body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+h1 {
+  font-size: xxx-large;
 }
 
 .welcome,
@@ -132,6 +126,7 @@ body {
   margin: 0.1em;
   border: 0.1em solid darkblue;
   border-radius: 1.5em;
+  cursor: pointer;
 }
 @media (min-width: 768px) {
   .submit {
@@ -145,11 +140,12 @@ body {
 }
 
 .success {
-  animation: success 2s ease;
+  background-color: darkgreen;
+  border-color: darkgreen;
 }
 
 .failure {
-  animation: failure 2s ease;
+  animation: failure 1s ease-in;
 }
 
 .material-icons {
@@ -165,6 +161,13 @@ body {
   .material-icons {
     font-size: xxx-large;
   }
+}
+
+.numbering,
+.hint {
+  display: block;
+  height: 3em;
+  border-top: 0.1em solid gray;
 }
 
 #welcome {
@@ -191,4 +194,11 @@ body {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+}
+
+#hints {
+  display: grid;
+  grid-template-columns: 3em auto;
+  margin-top: 1em;
+  padding: 2em 15%;
 }
