--- a/Projects/5 - Capstone/capstone/lettershuffle/templates/base.html
+++ b/Projects/5 - Capstone/capstone/lettershuffle/templates/base.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}LetterShuffle{% endblock title %}</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'lettershuffle/css/common.css' %}">
+        <link rel="stylesheet" href="{% static 'common/css/common.css' %}">
         {% block head %}{% endblock head %}
     </head>
     <body>
@@ -58,6 +58,7 @@
         <main>
             {% block body %}{% endblock body %}
         </main>
+        <script src="{% static 'lettershuffle/js/util.js' %}"></script>
         {% block scripts %}{% endblock scripts %}
     </body>
 </html>
